public_website/static/css/style.css
/* ... */
@media (max-width: 576px) {
    .search-container .search-results ul.search-results-list li.search-result-item {
        padding: 0.8rem;
    }
}

.search-container .search-results ul.search-results-list li.search-result-item .search-result-item-header {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    font-size: 0.8rem;
    color: #707070;
}

.search-container .search-results ul.search-results-list li.search-result-item .search-result-item-header .item-number {
    margin-bottom: 0.5rem;
}

.search-container .search-results ul.search-results-list li.search-result-item .search-result-item-header .bookmark-button {
    padding: 0;
    font-size: 0.8rem;
    color: #707070;
}

.search-container .search-results ul.search-results-list li.search-result-item .search-result-item-header .bookmark-button.bookmarked {
    color: #87B24D;
}

.search-container .search-results ul.search-results-list li.search-result-item .search-result-item-content {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.search-container .search-results ul.search-results-list li.search-result-item .item-title {
    color: #000;
    font-size: 1.5rem;
    display: inline-block;
}

.search-container .search-results ul.search-results-list li.search-result-item .item-sub-title {
    font-size: 0.9rem;
    color: #707070;
}

.search-container .search-results ul.search-results-list li.search-result-item .answer-preview {
    margin-top: 2rem;
    color: #707070;
}

.search-container .search-results ul.search-results-list li.search-result-item .answer-preview h4 {
    font-size: 1rem;
}

@media (max-width: 576px) {
    .search-container .search-results ul.search-results-list li.search-result-item .item-title {
        font-size: 1.3rem;
        margin-bottom: 1rem;
    }
}

.search-container .search-results ul.search-results-list li.search-result-item .item-info {
    display: flex;
    justify-content: space-between;
}

.search-container .search-results ul.search-results-list li.search-result-item .highlighted-meta:not(:last-child),
.answer-section .question-and-meta .meta-section .highlighted-meta:not(:last-child) {
    margin-right: 0.8rem;
}

.search-container .search-results ul.search-results-list li.search-result-item .highlighted-meta {
    margin-top: 1rem;
}

.search-container .search-results ul.search-results-list li.search-result-item .highlighted-meta,
.answer-section .question-and-meta .meta-section .highlighted-meta {
    background-color: #ebebeb;
    border-radius: 3px;
    padding: 0.3rem 0.5rem;
    display: inline-block;
    font-size: 0.8rem;
}

@media (max-width: 576px) {
    .search-container .search-results ul.search-results-list li.search-result-item .highlighted-meta,
    .answer-section .question-and-meta .meta-section .highlighted-meta {
        margin-bottom: 0.4rem;
        font-size: 0.7rem;
    }
}

.search-container .search-results ul.search-results-list li.search-result-item .highlighted-meta i,
.answer-section .question-and-meta .meta-section .highlighted-meta i {
    color: #707070;
}

.search-container .search-results ul.search-results-list li.search-result-item .highlighted-meta .meta-value,
.answer-section .question-and-meta .meta-section .highlighted-meta .meta-value {
    font-size: 0.8rem;
}

.search-container .search-results .search-pagination {
    text-align: center;
    margin-top: 1.5rem;
}

.search-container .search-results .search-pagination .page-number {
    border-radius: 50%;
    background-color: #fff;
    color: #9B63A8;
    margin: 0 0.2rem;
    border: 1px solid;
    display: inline-block;
    height: 40px;
    width: 40px;
    line-height: 36px;
    cursor: pointer;
}

.search-container .search-results .search-pagination .current-page {
    background-color: #9B63A8;
    color: #fff;
    cursor: default;
}

.search-container .mobile-filter-controls {
    display: none;
}

@media (max-width: 576px) {
    .search-container .mobile-filter-controls {
        display: flex;
        margin-bottom: 1.2rem;
    }

    .search-container .mobile-filter-controls button {
        color: #9B63A8;
        width: 50%;
        border: none;
        font-size: 0.9rem;
        padding: 0.3rem 0;
    }

    .search-container .mobile-filter-controls button:not(:last-child) {
        border-right: 1px solid;
    }
}

.search-results-search {
    display: flex;
    justify-content: end;
    margin-bottom: 1rem;
}

.search-results-search input {
    margin-bottom: 0;
    padding: 1rem 1rem;
    border: 1px solid #D6D6D6;
    border-right: none;
    border-radius: 0;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.search-results-search button[type="submit"] {
    color: #87B24D;
    padding: 0 1rem;
    cursor: pointer;
    background-color: #fff;
    font-size: 1.5rem;
    border: 1px solid #d6d6d6;
    border-left: none;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

.no-search-results-container {
    text-align: center;
    color: #9f9f9f;
    margin-top: 3rem;
}

.no-search-results-container i {
    font-size: 3rem;
}

.no-search-results-container p {
    margin: 0;
    margin-top: 0.4rem;
}

/* ======== MANAGE USERS ======== */

.sub-task-section-heading {
    color: #939393;
    margin-top: 1.3rem;
    margin-bottom: 0.5rem;
}

button.update-permissions {
    display: block;
    margin-top: 0.6rem;
}

button.grant-access {
    color: #87B24D;
    background-color: #E4FFBF;
}

button.deny-access {
    color: #bd0606;
    background-color: #ffd6d6;
}

#reviewVolunteerRequestForm {
    margin-top: 1.5rem;
}

/* ======== SUBMIT ANSWER ======== */

.answer-details h1,
.submit-answer-header h1 {
    font-size: 1.7rem;
    margin-top: 2rem;
}

.submit-answer-header h2 {
    font-size: 1.1rem;
    color: #8e8e8e;
    margin-bottom: 1.5rem;
}

.submit-answer-header .question-meta {
    margin: 1rem 0;
    font-size: 0.9rem;
    color: #666;
}
/* ... */

